--- a/Teronis.VCPlusPlus.Core/Teronis.VCPlusPlus.Core.vcxproj
+++ b/Teronis.VCPlusPlus.Core/Teronis.VCPlusPlus.Core.vcxproj
@@ -26,7 +26,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
@@ -115,6 +115,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Tools\Character.h" />
+    <ClInclude Include="Tools\Integer.h" />
+    <ClInclude Include="Tools\Math.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Tools\Character.cpp" />
+    <ClCompile Include="Tools\Integer.cpp" />
+    <ClCompile Include="Tools\Math.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
