--- a/Teronis.VCPlusPlus.Core/Teronis.VCPlusPlus.Core.vcxproj
+++ b/Teronis.VCPlusPlus.Core/Teronis.VCPlusPlus.Core.vcxproj
@@ -32,7 +32,7 @@
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -115,12 +115,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Core.h" />
     <ClInclude Include="Tools\Date.h" />
     <ClInclude Include="Tools\Character.h" />
     <ClInclude Include="Tools\Integer.h" />
     <ClInclude Include="Tools\Math.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Core.cpp" />
     <ClCompile Include="Tools\Date.cpp" />
     <ClCompile Include="Tools\Character.cpp" />
     <ClCompile Include="Tools\Integer.cpp" />
